--- a/PI/report/presentation/presentation3.tex
+++ b/PI/report/presentation/presentation3.tex
@@ -54,7 +54,15 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Parser BibTex}
+	\frametitle{Parser BibTeX}
+	\begin{itemize}
+		\item Módulo reescrito desde a fase anterior;
+		\item Todos os dados são inseridos na BD;
+		\item Entradas organizadas por key e não por autor;
+		\item Tratamento de actualizações;		
+	\end{itemize}
+		
+	
 \end{frame}
 
 \begin{frame}
@@ -67,7 +75,7 @@
 \end{frame}
 \begin{frame}
 	\frametitle{Interface Única}
-	\includegraphics[totalheight=1.2\textheight,angle=90]{../iPublicacoes2.png}
+	\includegraphics[width=1.2\textwidth]{../iPublications2.png}
 \end{frame}
 
 \section{Europass}
